--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,9 +1,9 @@
 name: Run Docker Container
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - master
             
 jobs:
   run-docker-container:
